# orts

./: .gitignore  ARCHITECTURE.ja.md  ARCHITECTURE.md  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  RELEASING.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
arika/: Cargo.toml  DESIGN.md  README.md
arika/src/: eclipse.rs  epoch.rs  frame.rs  horizons.rs  lib.rs  rotation.rs
arika/src/earth/: eop.rs  geodetic.rs  mod.rs  rotation.rs
arika/src/moon/: ephemeris.rs  mod.rs  rotation.rs
arika/src/planets/: mod.rs  rotation.rs
arika/src/sun/: ephemeris.rs  mod.rs
arika/tests/: eclipse_astronomical_events.rs  eclipse_geometry.rs  eop_finals2000a.rs  iau2006_vs_erfa.rs  iau_rotation_orekit.rs  trybuild.rs
arika/tests/fixtures/: finals2000A.sample  iau2006_erfa_reference.json  iau_rotation_orekit_reference.json
arika/tests/trybuild/: null_eop_in_iau2006.rs  null_eop_in_iau2006.stderr  null_eop_in_iau2006_full_from_utc.rs  null_eop_in_iau2006_full_from_utc.stderr  null_eop_in_polar_motion.rs  null_eop_in_polar_motion.stderr  null_eop_in_to_ut1.rs  null_eop_in_to_ut1.stderr
arika/tools/: generate_iau2006_reference.py  generate_iau2006_tables.py  generate_iau_rotation_fixtures.py
arika/wasm/: Cargo.toml
arika/wasm/src/: lib.rs
cli/: Cargo.toml  README.md  about.toml  build.rs
cli/src/: cli.rs  config.rs  license.rs  main.rs  satellite.rs  tle.rs
cli/src/commands/: convert.rs  mod.rs  replay.rs  run.rs
cli/src/sim/: controlled.rs  core.rs  mod.rs  params.rs
cli/tests/: e2e.rs  plugin_backend_e2e.rs  serve_dynamic_controlled_add_e2e.rs  spa_e2e.rs  throughput_mode_speedup_e2e.rs  thruster_plugin_e2e.rs  ws_e2e.rs
examples/plugins/bdot-finite-diff/: Cargo.toml  README.md  plot.py  pyproject.toml
kaname/: Cargo.toml  DESIGN.md
kaname/src/: body.rs  constants.rs  epoch.rs  frame.rs  horizons.rs  lib.rs  magnetic.rs  moon.rs  planets.rs  rotation.rs  sun.rs  wasm.rs
kaname/src/earth/: ellipsoid.rs  eop.rs  geodetic.rs  mod.rs
kaname/src/moon/: mod.rs  rotation.rs
kaname/src/sun/: mod.rs  rotation.rs
kaname/tests/: iau2006_vs_erfa.rs  iau_rotation_orekit.rs  trybuild.rs
kaname/tests/fixtures/: iau2006_erfa_reference.json  iau_rotation_orekit_reference.json
kaname/tests/trybuild/: null_eop_in_iau2006.rs  null_eop_in_iau2006.stderr  null_eop_in_iau2006_full_from_utc.rs  null_eop_in_iau2006_full_from_utc.stderr  null_eop_in_polar_motion.rs  null_eop_in_polar_motion.stderr  null_eop_in_to_ut1.rs
kaname/tools/: generate_iau2006_reference.py  generate_iau2006_tables.py  generate_iau_rotation_fixtures.py
orts/: Cargo.toml  README.md
orts/benches/: fiber_overhead.rs
orts/examples/: wasm_bdot_simulate.rs  wasm_pd_rw_simulate.rs
orts/examples/apollo11/: .gitignore  README.md  camera_policy.py  main.rs  plot_2d.py  plot_3d.py  plot_3d_pyvista.py  plot_common.py  pyproject.toml  test_camera_policy.py
orts/examples/artemis1/: .gitignore  README.md  extract_burns.py  main.rs  plot_trajectory.py  pyproject.toml
orts/examples/orbital_lifetime/: README.md  main.rs  plot_altitude.py
orts/examples/wasm-bdot/: main.rs
orts/examples/wasm-pd-rw/: main.rs
orts/src/: control.rs  effector.rs  environment.rs  events.rs  gravity.rs  kepler.rs  lib.rs  magnetic.rs  model.rs  orbital_system.rs  setup.rs  state.rs  tle.rs  two_body.rs
orts/src/attitude/: augmented.rs  bdot.rs  decoupled.rs  gravity_gradient.rs  mod.rs  pd_controller.rs  reference.rs  state.rs  system.rs
orts/src/group/: coupled.rs  dynamics.rs  independent.rs  mod.rs  prop_group.rs  scheduler.rs  state.rs
orts/src/orbital/: gravity.rs  kepler.rs  mod.rs  state.rs  system.rs  two_body.rs
orts/src/perturbations/: constant_thrust.rs  drag.rs  mod.rs  srp.rs  third_body.rs
orts/src/plugin/: actuators.rs  command.rs  controller.rs  error.rs  mod.rs  observation.rs  tick_input.rs
orts/src/record/: archetypes.rs  components.rs  entity_path.rs  recording.rs  rerun_export.rs  timeline.rs
orts/src/sensor/: gyroscope.rs  magnetometer.rs  mod.rs  noise.rs  star_tracker.rs  sun_sensor.rs
orts/src/spacecraft/: adapter.rs  dynamics.rs  mod.rs  mtq.rs  panel_srp.rs  reaction_wheel.rs  state.rs  surface.rs  thruster.rs  wrench.rs
orts/tests/: block_on_from_spawn_blocking.rs  oracle.rs  oracle_adcs_integration.rs  oracle_attitude.rs  oracle_brouwer.rs  oracle_detumbling.rs  oracle_discrete_bdot.rs  oracle_gcrf.rs  oracle_iss_decay.rs  oracle_mtq.rs  oracle_orekit.rs  oracle_pd_control.rs  oracle_plugin_wasm_bdot.rs  oracle_plugin_wasm_pd_rw.rs  oracle_reaction_wheel.rs  oracle_srp.rs  oracle_thruster.rs  plugin_bdot_detumbler.rs  plugin_bdot_finitediff.rs  thruster_assembly.rs  wasm_async_backend.rs
orts/tests/fixtures/: finals2000A.sample  iss_decay_reference.json  orekit_gcrf_propagation_reference.json
orts/wit/v0/: orts.wit
orts/wit/v1/: orts.wit
plugin-sdk/: Cargo.toml  README.md  build.rs
plugin-sdk/examples/: Cargo.toml
plugin-sdk/examples/bdot-finite-diff/: Cargo.toml  README.md  orts.toml  plot.py
plugin-sdk/examples/constellation-phasing/: .gitignore  Cargo.toml  README.md  animate.py  bench.sh  bench_plot.py  gen_bench_config.py  orts.toml  plot.py
plugin-sdk/src/: bindings.rs  lib.rs  mode.rs
plugins/detumble-nadir/: Cargo.toml
plugins/pd-rw-control/: Cargo.toml  README.md  mission.yaml  orts.toml  plot.py
plugins/pd-rw-unloading/: Cargo.toml
rrd-wasm/: Cargo.toml  README.md
rrd-wasm/src/: lib.rs  wasm.rs
sim/: Cargo.toml
sim/src/: lib.rs  setup.rs
sim/tests/: oracle.rs  oracle_attitude.rs  oracle_brouwer.rs  oracle_orekit.rs  oracle_srp.rs  oracle_thruster.rs
tobari/: Cargo.toml  DESIGN.md  README.md  build.rs
tobari/data/: igrf14.rs
tobari/src/: cssi.rs  exponential.rs  gfz.rs  harris_priester.rs  lib.rs  math.rs  space_weather.rs  wasm.rs
tobari/tests/: oracle_hp.rs  oracle_nrlmsise00.rs  oracle_orekit_msise.rs
tobari/wasm/: Cargo.toml
utsuroi/: Cargo.toml  README.md
utsuroi/src/: comparison.rs  integrator.rs  lib.rs  math.rs  state.rs  test_systems.rs
(+514 files in other folders)
