[workspace]
resolver = "2"
members = [
    "utsuroi",
    "kaname",
    "cli",
    "orts",
    "tobari",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sksat/orts"

[workspace.dependencies]
utsuroi = { path = "utsuroi" }
kaname = { path = "kaname" }
orts = { path = "orts" }
tobari = { path = "tobari" }
nalgebra = "0.34"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rerun = { version = "0.30", default-features = false, features = ["sdk"] }
ureq = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "tiff"] }
toml = "1.0"
serde_yaml = "0.9"
