[workspace]
resolver = "2"
members = [
    "utsuroi",
    "kaname",
    "cli",
    "orts",
    "tobari",
    "rrd-wasm",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sksat/orts"

[workspace.dependencies]
utsuroi = { path = "utsuroi" }
kaname = { path = "kaname" }
orts = { path = "orts" }
tobari = { path = "tobari" }
nalgebra = "0.34"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "fs", "io-util"] }
tokio-tungstenite = "0.28"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rerun = { version = "0.30", default-features = false, features = ["sdk"] }
ureq = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "tiff"] }
toml = "1.0"
serde_yaml = "0.9"
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
thiserror = "2"

# wasmtime: Pulley single-backend + Component Model. Cranelift is
# enabled for runtime compile path (plugin-wasm default), runtime-only
# deployments that load pre-compiled .cwasm artefacts are built by
# turning off `cranelift`/`wat`/`anyhow` via cargo feature unification.
# `anyhow` is required because wasmtime's public API (e.g. Module::new,
# Engine::precompile_component) returns `anyhow::Error`.
# See DESIGN.md Phase P for the rationale. Version pinned exactly to
# keep CI deterministic against Cranelift optimizer churn (orts/plan).
wasmtime = { version = "=43.0.0", default-features = false, features = [
    "runtime",
    "cranelift",
    "pulley",
    "component-model",
    "std",
    "wat",
    "anyhow",
] }
