[workspace]
resolver = "2"
members = [
    "utsuroi",
    "arika",
    "cli",
    "orts",
    "tobari",
    "rrd-wasm",
    "plugin-sdk",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
repository = "https://github.com/sksat/orts"
homepage = "https://sksat.github.io/orts/"
authors = ["sksat <sksat@sksat.net>"]

[workspace.dependencies]
# Internal workspace crates: path for local resolution + version for crates.io
# publish. The version is kept in sync with [workspace.package] version above.
utsuroi = { path = "utsuroi", version = "=0.1.1" }
arika = { path = "arika", version = "=0.1.1" }
orts = { path = "orts", version = "=0.1.1" }
tobari = { path = "tobari", version = "=0.1.1" }
nalgebra = "0.34"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "fs", "io-util"] }
tokio-tungstenite = "0.28"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rerun = { version = "0.30", default-features = false, features = ["sdk"] }
ureq = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "tiff"] }
toml = "1.0"
serde_yaml = "0.9"
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
thiserror = "2"

# wasmtime: Pulley single-backend + Component Model. Cranelift is
# enabled for runtime compile path (plugin-wasm default), runtime-only
# deployments that load pre-compiled .cwasm artefacts are built by
# turning off `cranelift`/`wat`/`anyhow` via cargo feature unification.
# `anyhow` is required because wasmtime's public API (e.g. Module::new,
# Engine::precompile_component) returns `anyhow::Error`.
# See DESIGN.md Phase P for the rationale. Minor-pinned so that
# `cargo update` picks up patch fixes (including security) automatically.
wasmtime-wasi = { version = "~43.0", default-features = false }
wasmtime = { version = "~43.0", default-features = false, features = [
    "runtime",
    "cranelift",
    "pulley",
    "component-model",
    "std",
    "wat",
    "anyhow",
] }
