[package]
name = "arika"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Coordinate frames, reference transforms, epochs, and celestial body ephemerides for orbital mechanics."
keywords = ["coordinates", "ephemeris", "astronomy", "geodesy", "orbital"]
categories = ["science", "science::geo"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0.116"

[features]
wasm = ["wasm-bindgen"]
fetch-horizons = ["dep:ureq"]
