[package]
name = "arika"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Coordinate frames, reference transforms, epochs, and celestial body ephemerides for orbital mechanics."
keywords = ["coordinates", "ephemeris", "astronomy", "geodesy", "orbital"]
categories = ["science", "science::geo"]

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
serde = { version = "1", default-features = false, features = ["derive"] }
libm = "0.2"
ureq = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
trybuild = "1.0.116"

[features]
default = ["std"]
std = ["alloc", "nalgebra/std", "serde/std"]
alloc = ["serde/alloc"]
fetch-horizons = ["std", "dep:ureq"]
