[package]
name = "orts-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Include viewer-dist/ so `cargo publish` bundles the embedded SPA assets
include = ["src/**/*", "build.rs", "tests/**/*", "viewer-dist/**/*"]

[[bin]]
name = "orts"
path = "src/main.rs"

[features]
default = ["viewer"]
viewer = ["dep:rust-embed"]
plugin-wasm = ["orts/plugin-wasm", "dep:wasmtime"]

[dependencies]
nalgebra.workspace = true
utsuroi.workspace = true
tobari = { workspace = true, features = ["fetch"] }
kaname.workspace = true
orts.workspace = true
clap.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
ureq.workspace = true
image.workspace = true
toml.workspace = true
serde_yaml.workspace = true
rust-embed = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
tokio-tungstenite.workspace = true
