[package]
name = "orts-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Include viewer-dist/ so `cargo publish` bundles the embedded SPA assets.
# about.toml is required by notalawyer-build / cargo-about during build.
include = ["src/**/*", "build.rs", "tests/**/*", "viewer-dist/**/*", "about.toml"]

[[bin]]
name = "orts"
path = "src/main.rs"

[features]
default = ["viewer", "plugin-wasm-async"]
viewer = ["dep:rust-embed"]
plugin-wasm = ["orts/plugin-wasm", "dep:wasmtime"]
# Enables the fiber-based async WASM backend so `orts run --plugin-backend=async`
# (and `auto` above the threshold) can multiplex many satellites on one
# worker thread. Opt-in at the orts-crate level, default-on here in the CLI.
plugin-wasm-async = ["plugin-wasm", "orts/plugin-wasm-async"]

[dependencies]
nalgebra.workspace = true
utsuroi.workspace = true
tobari = { workspace = true, features = ["fetch"] }
arika.workspace = true
orts.workspace = true
log = "0.4.29"
clap.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
ureq.workspace = true
image.workspace = true
toml.workspace = true
serde_yaml.workspace = true
rust-embed = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
rayon = "1"
notalawyer = "0.2"
notalawyer-clap = "0.2"

[build-dependencies]
notalawyer-build = "0.2"

[dev-dependencies]
tokio-tungstenite.workspace = true
tempfile = "3"
