[package]
name = "orts-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Orts CLI — orbital mechanics simulator with embedded 3D viewer and WebSocket telemetry server."
keywords = ["cli", "orbital-mechanics", "spacecraft", "simulation", "aerospace"]
categories = ["command-line-utilities", "science"]
# Include viewer-dist/ so `cargo publish` bundles the embedded SPA assets.
# about.toml is required by notalawyer-build / cargo-about during build.
include = ["src/**/*", "build.rs", "tests/**/*", "viewer-dist/**/*", "textures/**/*", "about.toml", "README.md"]

[[bin]]
name = "orts"
path = "src/main.rs"

[features]
default = ["viewer", "plugin-wasm-async"]
viewer = ["dep:rust-embed"]
plugin-wasm = ["orts/plugin-wasm", "dep:wasmtime"]
# Enables the fiber-based async WASM backend so `orts run --plugin-backend=async`
# (and `auto` above the threshold) can multiplex many satellites on one
# worker thread. Opt-in at the orts-crate level, default-on here in the CLI.
plugin-wasm-async = ["plugin-wasm", "orts/plugin-wasm-async"]

[dependencies]
nalgebra.workspace = true
utsuroi.workspace = true
tobari = { workspace = true, features = ["fetch"] }
arika.workspace = true
orts.workspace = true
log = "0.4.29"
clap.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
ureq.workspace = true
image.workspace = true
toml.workspace = true
serde_yaml.workspace = true
rust-embed = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
rayon = "1"
notalawyer = "0.2"
notalawyer-clap = "0.2"

[build-dependencies]
notalawyer-build = "0.2"

[dev-dependencies]
tokio-tungstenite.workspace = true
tempfile = "3"

# cargo-binstall metadata: `cargo binstall orts-cli` (or
# `cargo binstall --git https://github.com/sksat/orts orts-cli` while
# pre-publish) reads this block and downloads the prebuilt tarball
# attached to the matching GitHub Release instead of compiling from source.
# The asset filename and inner directory layout MUST stay in sync with
# `.github/workflows/release.yml`.
#
# Template variables (from cargo-binstall docs):
#   { name }           → crate name, here "orts-cli"
#   { version }        → crate version, e.g. "0.1.0-beta.1"
#   { target }         → rustc target triple, e.g. "x86_64-unknown-linux-gnu"
#   { archive-suffix } → ".tar.gz" (derived from pkg-fmt)
#   { bin }            → binary name, here "orts" (differs from crate name)
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ version }-{ target }/{ bin }{ binary-ext }"
