[package]
name = "orts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra.workspace = true
rerun.workspace = true
kaname.workspace = true
utsuroi.workspace = true
tobari.workspace = true
log = "0.4.29"
serde.workspace = true
thiserror.workspace = true
wasmtime = { workspace = true, optional = true }

[features]
fetch-weather = ["tobari/fetch"]
fetch-horizons = ["kaname/fetch-horizons"]
# Phase P1: load WASM Component guest controllers at runtime via
# wasmtime + Pulley interpreter. See `orts::plugin::wasm`.
plugin-wasm = ["dep:wasmtime"]

[dev-dependencies]
proptest = "1.10.0"
serde_json.workspace = true
