[package]
name = "orts-plugin-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SDK for writing orts WASM plugin guests (callback and main-loop styles)."
keywords = ["orts", "plugin", "sdk", "wasm", "component-model"]
categories = ["wasm", "api-bindings"]
readme = "README.md"
include = [
    "/src/**/*",
    "/wit/**/*",
    "/README.md",
    "/Cargo.toml",
    "/build.rs",
]

[dependencies]
wit-bindgen = { version = "0.51.0", default-features = false, features = ["macros"] }
