[package]
name = "orts-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra.workspace = true
rerun.workspace = true
kaname.workspace = true
orts-integrator.workspace = true
orts-orbits.workspace = true
orts-attitude.workspace = true
