[package]
name = "tobari"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Earth environment models — atmospheric drag density, IGRF geomagnetic field, and space weather integration."
keywords = ["atmosphere", "igrf", "magnetic-field", "space-weather", "aerospace"]
categories = ["science", "aerospace"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra.workspace = true
arika.workspace = true
ureq = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
ureq.workspace = true

[features]
default = ["fetch-igrf"]
fetch = ["dep:ureq"]
fetch-igrf = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arika = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
