[package]
name = "tobari"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Earth environment models — atmospheric drag density, IGRF geomagnetic field, and space weather integration."
keywords = ["atmosphere", "igrf", "magnetic-field", "space-weather", "aerospace"]
categories = ["science", "aerospace"]
# Restrict the crate tarball to source + vendored IGRF coefficients +
# build.rs. Default cargo inclusion would package the 21 MB tobari-example-web
# demo under examples/, the ~1 MB oracle test fixtures under tests/fixtures/,
# and generated build artefacts, pushing the .crate over the crates.io 10 MiB
# limit. README / Cargo.toml are auto-included by cargo.
include = [
    "/src/**/*",
    "/data/igrf14.rs",
    "/build.rs",
    "/README.md",
    "/Cargo.toml",
]

[lib]

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
arika = { path = "../arika", version = "=0.2.0", default-features = false }
libm = "0.2.16"
ureq = { workspace = true, optional = true }

[build-dependencies]
ureq.workspace = true

[features]
default = ["std", "fetch-igrf"]
std = ["alloc", "nalgebra/std", "arika/std"]
alloc = []
fetch = ["std", "dep:ureq"]
fetch-igrf = []

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arika = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
