[package]
name = "utsuroi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Numerical ODE integrators (RK4, Dormand-Prince, Störmer-Verlet, Yoshida) for orbital mechanics and rigid-body simulation."
keywords = ["ode", "integrator", "numerical", "simulation", "orbital"]
categories = ["algorithms", "science"]

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["libm", "macros"] }
libm = "0.2.16"

[features]
default = ["std"]
std = ["nalgebra/std"]

[dev-dependencies]
proptest = "1.10.0"
