[package]
name = "arika-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WebAssembly bindings for the arika coordinate/epoch/ephemeris library."
keywords = ["wasm", "coordinates", "ephemeris", "astronomy"]
categories = ["wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arika.workspace = true
nalgebra.workspace = true
wasm-bindgen = "0.2"
