[workspace]
resolver = "2"
members = [
    "bdot-finite-diff",
    "pd-rw-control",
    "detumble-nadir",
    "pd-rw-unloading",
]
# nos3-adcs is excluded from the workspace because its build.rs requires
# network access (git clone of nasa-itc/generic_adcs). Build it separately:
#   cd nos3-adcs && cargo component build
exclude = ["nos3-adcs"]

[workspace.dependencies]
orts-plugin-sdk = { path = ".." }
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
