[package]
name = "orts-example-plugin-pd-rw-control"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
orts-plugin-sdk = { path = "../../plugin-sdk" }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:orts-example-plugin-pd-rw-control"

[package.metadata.component.target]
path = "../../orts/wit/v0"
world = "plugin"
