[package]
name = "orts-example-plugin-pd-rw-unloading"
version = "0.0.0"
edition = "2024"
publish = false

# Independent workspace so this crate is not pulled into the parent
# orts workspace. wasm32-wasip2 target would break `cargo build
# --workspace` at the orts root.
[workspace]

[dependencies]
orts-plugin-sdk = { path = "../../plugin-sdk" }
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:orts-example-plugin-pd-rw-unloading"

[package.metadata.component.target]
path = "../../orts/wit/v0"
world = "plugin"
