[package]
name = "tobari-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WebAssembly bindings for tobari Earth environment models."
keywords = ["wasm", "atmosphere", "magnetic-field", "igrf"]
categories = ["wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tobari = { workspace = true }
arika.workspace = true
nalgebra.workspace = true
wasm-bindgen = "0.2"
