[project]
name = "apollo11-viz"
version = "0.1.0"
description = "Apollo 11 trajectory visualization scripts"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "kaleido>=0.2",
    "pyvista>=0.43",
    "pillow>=10.0",
    "imageio[ffmpeg]>=2.31",
]
