[package]
name = "orts-example-plugin-bdot-finite-diff"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:orts-example-plugin-bdot-finite-diff"

[package.metadata.component.target]
# Point to the orts crate's WIT definitions. The path is relative to
# this crate's Cargo.toml.
path = "../../../orts/wit/v0"
world = "plugin"
